[package]
name = "sqlite-tonbo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["tokio"]
tokio = ["dep:tokio", "tonbo/tokio"]
wasm = [
    "dep:wasm_thread",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "tonbo/wasm",
]

[dependencies]
flume = "0.11"
fusio = { git = "https://github.com/tonbo-io/fusio.git", rev = "216eb446fb0a0c6e5e85bfac51a6f6ed8e5ed606", package = "fusio", features = [
    "dyn",
    "fs",
    "aws",
] }
futures-util = "0.3"
tokio = { version = "1.41", optional = true, features = ["rt-multi-thread"] }
tonbo = { git = "https://github.com/tonbo-io/tonbo", rev = "f6e005e88b478c6063d61b867645e4683ef0658c", package = "tonbo", default-features = false, features = [
    "bytes",
], optional = true }
tonbo_net_client = { git = "https://github.com/tonbo-io/tonbo", rev = "f6e005e88b478c6063d61b867645e4683ef0658c", package = "tonbo_net_client" }
rusqlite = { git = "https://github.com/tonbo-io/rusqlite", branch = "wasm32-unknown-unknown", features = [
    "vtab",
    "bundled",
] }

wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm_thread = { version = "0.3", optional = true }

log = "0.4"
console_log = { version = "1.0", features = ["color"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[patch.crates-io.wasm_thread]
git = "https://github.com/Twey/wasm_thread"
branch = "post-message"
