[package]
name = "sqlite-tonbo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["tokio"]
tokio = ["dep:tokio",  "tonbo_net_client/default"]
wasm = [
    "dep:wasm_thread",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "fusio/no-send",
    "tonbo_net_client/wasm"
]

[dependencies]
flume = "0.11"
fusio = { git = "https://github.com/tonbo-io/fusio.git", rev = "88c6134948d05bef33598a969e9292ad38a8db4b", package = "fusio", features = [
    "dyn",
    "fs",
    "aws",
] }
futures-util = "0.3"
tokio = { version = "1.41", optional = true, features = ["rt-multi-thread"] }
tonbo = { git = "https://github.com/tonbo-io/tonbo", rev = "a6ee2303464667d3689ae1c1b075bb25840063d7", package = "tonbo", default-features = false }
tonbo_net_client = { git = "https://github.com/tonbo-io/tonbo", rev = "a6ee2303464667d3689ae1c1b075bb25840063d7", default-features = false, package = "tonbo_net_client" }
rusqlite = { git = "https://github.com/tonbo-io/rusqlite", branch = "feat/integrity", features = [
    "vtab",
    "bundled",
] }
sqlparser = "0.52"

wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm_thread = { version = "0.3", optional = true }

log = "0.4"
console_log = { version = "1.0", features = ["color"] }
console_error_panic_hook = "0.1.7"
[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[patch.crates-io.wasm_thread]
git = "https://github.com/Twey/wasm_thread"
branch = "post-message"
