[package]
name = "sqlite-tonbo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["tokio"]
tokio = ["dep:tokio", "tonbo/tokio", "tonbo/tokio-http"]
wasm = [
    "dep:wasm_thread",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "fusio/no-send",
    "tonbo/wasm",
    "tonbo/sync"
]
loadable_extension = ["rusqlite/functions", "rusqlite/loadable_extension"]

[dependencies]
flume = "0.11"
fusio = { version = "=0.3.4", package = "fusio", features = [
    "dyn",
    "fs",
    "aws",
] }
fusio-dispatch = { version = "=0.3.4", package = "fusio-dispatch", features = ["aws"] }
fusio-parquet = { version = "=0.3.4", package = "fusio-parquet" }
futures-util = "0.3"
tokio = { version = "1.41", optional = true, features = ["rt-multi-thread"] }
tonbo = { git = "https://github.com/tonbo-io/tonbo", rev = "8c3ad6ffe0d40c8be1332ccbcf9d230f838f73ba", package = "tonbo", default-features = false, features = ["aws"] }
rusqlite = { version = "0.32.1", features = [
    "vtab",
    "bundled",
] }
sqlparser = "0.52"

wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm_thread = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }
log = "0.4"
console_log = { version = "1.0", features = ["color"] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[patch.crates-io.rusqlite]
git = "https://github.com/tonbo-io/rusqlite"
branch = "feat/integrity"

[patch.crates-io.wasm_thread]
git = "https://github.com/Twey/wasm_thread"
branch = "post-message"

[profile.release]
codegen-units = 1
lto = true
