[package]
name = "sqllogictest"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
clap            = { version = "4" }
glob            = { version = "0.3" }
sqlite-tonbo    = { path = "../.." }
sqllogictest    = { version = "0.14" }
tempfile        = { version = "3.10" }
rusqlite = { git = "https://github.com/tonbo-io/rusqlite", branch = "wasm32-unknown-unknown", features = [
    "vtab",
    "bundled",
] }
